# sauron

./: README.md  package.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/db/: clickhouse.ts  common.ts  postgres.ts
src/routes/: +page.svelte
