[package]
name = "sauron"
version = "0.1.0"
description = "database query app"
authors = ["svovoniks"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sauron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio-postgres = { version = "0.7.14", features = ["array-impls", "with-bit-vec-0_8", "with-chrono-0_4", "with-serde_json-1", "with-time-0_2", "with-time-0_3", "with-uuid-1"] }
hex = "0.4.3"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.31"
once_cell = "1.21.3"
lazy_static = "1.5.0"
